--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,11 @@
 # Netlify configuration
-# Build is handled by Netlify UI: build command `npm run build`, publish `dist`
+#[build]
+#  command = "npm run build"
+#  publish = "dist"
+
+[build]
+  command = "npm run build"
+  publish = "dist"
 
 [[headers]]
   for = "/assets/*"
